# solarcido

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  mock_parity_scenarios.json  package-lock.json  package.json  test_api.ts  tsconfig.json
.cargo/: config.toml
.solarcido/sessions/: latest  session-1777649713510.jsonl
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: lib.rs
crates/mock-solar-service/: Cargo.toml
crates/mock-solar-service/src/: lib.rs  main.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  lib.rs  mcp.rs  mcp_tool_adapter.rs  session.rs  usage.rs
crates/solarcido-cli/: Cargo.toml
crates/solarcido-cli/src/: main.rs
crates/solarcido-cli/tests/: mock_parity_harness.rs  slash_commands_smoke.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: MULTI_AGENT_ORCHESTRATION.md  ROADMAP.md  RUST_PARITY.md  RUST_PORT.md  SPEC.md
docs-comparison/: README.md  planner.md  spec-summary.md
scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
src/: cli.ts  index.ts  interactive.ts
src/agents/: execution-guard.ts  executor.ts  explorer.ts  planner.ts  reviewer.ts  types.ts  verifier.ts
src/approvals/: classify-command.ts  policy.ts  prompt.ts
src/config/: load-config.ts  schema.ts
src/sessions/: session-store-types.ts  session-store.js  session-store.ts
src/solar/: client.ts  constants.ts
src/tools/: filesystem.ts  process.ts  registry.ts
src/workflow/: agent-loop.ts  context-budget.ts  orchestrator.ts  run-agent-loop.ts  types.ts
tests/: approvals.test.mjs  cli.test.mjs  config.test.mjs  execution-guard.test.mjs  sessions.test.mjs  tools.test.mjs
