[workspace]
members = [
  "crates/api",
  "crates/commands",
  "crates/compat-harness",
  "crates/mock-solar-service",
  "crates/plugins",
  "crates/runtime",
  "crates/telemetry",
  "crates/tools",
  "crates/solarcido-cli",
]
# claw-rust/ is kept as a local reference snapshot; not compiled as part of
# the Solarcido workspace.
exclude = ["claw-rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
futures-util = "0.3"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

