[package]
name = "solarcido-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
solarcido-plugins = { path = "../plugins" }
serde_json.workspace = true
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
