[package]
name = "mock-solar-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mock-solar-service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync"] }

[lints]
workspace = true
