[package]
name = "solarcido-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
glob.workspace = true
regex.workspace = true
serde_json.workspace = true
solarcido-api = { path = "../api" }
solarcido-runtime = { path = "../runtime" }
tokio.workspace = true
walkdir.workspace = true

[lints]
workspace = true

